--- a/_app/index.pug
+++ b/_app/index.pug
@@ -1,7 +1,7 @@
 -var path = '';
 -var head_url = '';
 -var head_title = '«Метафоричекие ассоциативные карты»';
--var head_description = 'Онлайн мастер-класс Жанны Абрамовой';
+-var head_description = '3-дневный онлайн мастер-класс Жанны Абрамовой';
 //-var head_img = 'img/banner.jpg';
 -var styles = path+'css/styles.min.css';
 -var fav_ico = path+'favicon.ico';
@@ -18,6 +18,13 @@
 //- -var footer_title = true
 //- -var oferta = 'https://mastervision.su/oferta.docx'
 
+mixin b(cl, href, p, target, id)
+	a.button(class=cl href!=href target=target id=id)=p
+mixin gt(cl,h3)
+	h3.general-title(class=cl)=h3
+mixin ims(cl,src,alt)
+	img(class=cl src=path+src alt=alt)
+
 doctype html
 html(lang="ru")
 	head
@@ -26,6 +33,15 @@ html(lang="ru")
 	body
 		include pug/scripts/body_top_scripts
 		.wrapper
+			.container
+				br
+				br
+				br
+				br
+				ul.general-list
+					li Подводные камни при использовании метафорических ассоциативных карт, о чем вам не расскажут другие
+					li Запросы, с которыми работают метафорические ассоциативные карты
+					li Как использовать метафорические ассоциативные карты в самоанализе
 			include pug/main/1-main
 			include pug/main/2-video
 			include pug/main/3-about
