--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -5,13 +5,13 @@
 body
 	font-size: 18px
 	font-family: G
-	color #000
+	color #4D4D4D
 	background-color #fff
 	line-height: 1.5
 .wrapper
 	overflow: hidden;
 a
-	color: #000
+	color: #4D4D4D
 	&:focus
 		outline: 0
 		text-decoration none
@@ -63,80 +63,59 @@ footer
 		cursor pointer
 		margin 0 auto
 .button
-	display block
+	display inline-block
 	text-align center
 	text-decoration none
-	color: #000
-	width: 100%
-	padding: 35px 20px;
-	box-shadow: inset 0px 1px 8.7px 1.3px rgba(255, 255, 255, 0.57),0px 1px 35px 0px rgba(158, 126, 192, 0.4);
-	background-color: #bda2dc
-	background-image: linear-gradient(to top, #bda2dc, #d0b3dd)
-	border-radius: 5px;
-	transition: all .3s ease;
+	font-size: 22px
+	color: #fff
+	width: auto
+	padding: 35px 80px;
+	background-color: mP
+	border-radius: 50px;
+	transition: all .6s ease;
 	&:focus
 		text-decoration none
-		color #000
+		color #fff
 	&:hover
 		text-decoration none
 		color #000
-		transform: translateY(3px)
-		background-image: linear-gradient(to bottom, #bda2dc, #d0b3dd)
-		box-shadow: inset 0px 1px 8.7px 1.3px rgba(255, 255, 255, 0.57),0px 1px 15px 0px rgba(158, 126, 192, 0.5);
-	&-wrapper
-		width: 100%;
-		max-width: 384px;
-		margin 0 auto
-		position: relative;
-		&:before
-			content: ''
-			display: block;
-			position: absolute;
-			width: 96%;
-			margin: 0 auto;
-			left: 0;
-			right: 0;
-			bottom: -3px;
-			background-color: #bda0d9
-			border-radius: 5px
+		transform: translateY(-3px)
+		background-color #F0DFFC
 .general-title
 	text-align center
-	font-size: 35px
+	font-size: 36px
 	font-weight: bold
-	margin-bottom: 50px
-	text-transform uppercase
-	&-left
-		text-align: left;
+	margin-bottom: 90px
 .general-list
 	li
 		list-style: none
-		padding-left: 34px
-		margin-bottom: 20px
+		padding-left: 54px
+		margin-bottom: 30px
 		position relative
 		&:last-child
 			margin-bottom: 0
+		span
+			font-weight: bold
 		&:before
 			content: ''
 			display block
 			position absolute
 			top 0
 			left 0
-			width 26px
-			height 26px
+			width 30px
+			height 30px
 			border-radius: 50%
-			border: 1px solid #c5a9dd
+			background-color: mP
 		&:after
 			content: ''
 			display block
 			position absolute
-			border-radius: 50%
-			background-color: #c5a9dd
-			box-shadow: inset 0px 1px 8.7px 1.3px rgba(255, 255, 255, 0.57);
-			width: 14px;
-			height: 14px;
-			background-color: #bda2dc
-			background-image: linear-gradient(to top, #bda2dc, #d0b3dd)
-			left 6px
-			top 6px
+			top 10px
+			left 9px
+			width 14px
+			height: 7px
+			border-bottom: 2px solid #fff
+			border-left: 2px solid #fff
+			transform: rotate(-39deg)
 .general-text
 	margin-bottom: 20px
