--- a/_app/pug/main/1-main.pug
+++ b/_app/pug/main/1-main.pug
@@ -1,22 +1,26 @@
 section#main
-	+imgs('main-bg', 'img/backs/main.png','Жанна Абрамова')
-	.wrapper-abs.wrapper-abs-main
-		.container
-			.content
-				.date
-					.date-item
-						p.date-item-text
-							span 17-19
-							|  октября
-					.date-item
-						p.date-item-text
-							span 19:00
-							|  МСК
-					.date-item
-						p.date-item-text Бесплатный онлайн мастер-класс
-				p.main-pre Проективный метод современной психологии
-				h1.main-title Метафоричекие ассоциативные карты
-				h2.main-subtitle решение самых сложных жизненных вопросов
-				p.main-author Спикер
-					span Жанна Абрамова
-				+b('button-up', href, 'Принять участие')
+	//- +imgs('main-bg', 'img/backs/main.png','Жанна Абрамова')
+	//- .wrapper-abs.wrapper-abs-main
+	.container
+		.content
+			.general-img.general-img-main-1
+			.general-img.general-img-main-2
+			.date
+				.date-item
+					p.date-item-text
+						span 17-19
+						|  октября
+				.date-item
+					p.date-item-text
+						span 19:00
+						|  МСК
+				.date-item
+					p.date-item-text Бесплатный онлайн 
+						br
+						| мастер-класс
+			p.main-pre Проективный метод современной психологии
+			h1.main-title Метафоричекие ассоциативные карты
+			h2.main-subtitle решение самых сложных жизненных вопросов
+			p.main-author Спикер
+				span Жанна Абрамова
+			+b('button-up', href, 'Принять участие')
