--- a/_app/pug/main/2-video.pug
+++ b/_app/pug/main/2-video.pug
@@ -1,9 +1,9 @@
 section#video
 	.container
 		.content
-			+imgs('general-img general-img-back', 'img/backs/video.png', 'Размытие')
-			+imgs('general-img general-img-singlestar', 'img/images/video-star.png', 'Одна звезда')
-			.video-stars
+			.general-img.general-img-back
+			.general-im.general-img-singlestar
+			.general-img.general-img-video-stars
 			.row
 				.col-md-10
 					+gt('', 'Почему не только психологам необходимо изучить метод современной проективной психологии МАК')
@@ -16,6 +16,6 @@ section#video
 						li Возможность начать консультационную деятельность и в сжатые сроки выйти на достойный доход.
 	.video-content
 		+imgs('video-content-img', 'img/images/video.png', 'Видео')
-		.play-button
+		a.play-button(href="#!")
 	.container
 		+b('button-up', href, 'Хочу узнать подробнее')
