Main page is stylezed

--- a/_app/pug/main/2-video.pug
+++ b/_app/pug/main/2-video.pug
@@ -1,11 +1,11 @@
 section#video
 	.container
 		.content
-			.general-img.general-img-back
-			.general-im.general-img-singlestar
+			.general-img.general-img-video-back
+			.general-im.general-img-video-singlestar
 			.general-img.general-img-video-stars
 			.row
-				.col-md-10
+				.col-md-9
 					+gt('', 'Почему не только психологам необходимо изучить метод современной проективной психологии МАК')
 					ul.general-list
 						li Подходят для решения острых, сложных на первый взгляд нерешаемых вопросов в сфере отношений, финансов и предназначения.
@@ -16,6 +16,6 @@ section#video
 						li Возможность начать консультационную деятельность и в сжатые сроки выйти на достойный доход.
 	.video-content
 		+imgs('video-content-img', 'img/images/video.png', 'Видео')
-		a.play-button(href="#!")
+		a.play-button(href="javascript:void(0);")
 	.container
 		+b('button-up', href, 'Хочу узнать подробнее')
