--- a/_app/pug/main/3-about.pug
+++ b/_app/pug/main/3-about.pug
@@ -1,9 +1,9 @@
 section#about
 	.container
 		.content
-			+imgs('general-img general-img-back', 'img/backs/about.png', 'Размытие')
-			+imgs('general-img general-img-about-1', 'img/images/star-1.png', 'Звезда')
-			+imgs('general-img general-img-about-2', 'img/images/star-2.png', 'Звезда')
+			.general-img.general-img-about-back
+			.general-img.general-img-about-1
+			.general-img.general-img-about-2
 			+gt('', 'Почему психологам необходимо владеть метафорическими ассоциациативными картами?')
 			.abouts
 				.abouts-item
