--- a/_app/pug/main/4-plan.pug
+++ b/_app/pug/main/4-plan.pug
@@ -1,10 +1,11 @@
 section#plan
 	.container
 		.content
-			.plan-stars.plan-stars-1
-			+imgs('general-img general-img-plan-back', 'img/backs/plan.png', 'Размытие')
-			+imgs('general-img general-img-plan-img', 'img/images/star-3.png', 'Звезда')
-			.plan-stars.plan-stars-2
+			.general-img.general-img-plan-stars-1
+			.general-img.general-img-plan-back
+			.general-img.general-img-plan-1
+			.general-img.general-img-plan-stars-2
+			+gt('', 'Что ждет Вас на мастер-классе?')
 			.days
 				.day
 					h4.day-title День 1
