--- a/_app/pug/main/7-modal.pug
+++ b/_app/pug/main/7-modal.pug
@@ -1,5 +1,5 @@
 .modal#Modal
-	h3.general-title.general-title-modal Присоединится к мастер-классу прямо сейчас
+	h3.general-title.general-title-modal Присоедяйтесь к мастер-классу прямо сейчас
 	form(action!=action+group method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8" target=form_target).form.form-modal
 		.email-block.email-block-form
 			input(type="hidden" value="1" name="required_fields[email]")
@@ -10,8 +10,8 @@
 		.checking.checking-modal
 			input(type="checkbox" id="check-m").check
 			label(for="check-m").check-label Я согласен с 
-				a(href="https://mastervision.su/privacy" target="_blank") условиями обработки
-				|  персональных данных по 152 - Ф3
+				a(href="https://iomp.ru/privacy" target="_blank") условиями обработки
+				|  персональных данных по&nbsp;152&nbsp;-&nbsp;Ф3
 		div(style="display: none;")
 			div(style="display: none;")
 				input(type="hidden" value=group name="Contact[id_newsletter]")
