--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -8,15 +8,15 @@ body
 	color #4D4D4D
 	background-color #fff
 	line-height: 109%
-.container
-	@media screen and (min-width:768px)
-		width: 750px
-	@media screen and (min-width:992px)
-		width: 970px
-	@media screen and (min-width:1200px)
-		width: 1170px
-	@media screen and (min-width 1230px)
-		width 98%
+// .container
+// 	@media screen and (min-width:768px)
+// 		width: 750px
+// 	@media screen and (min-width:992px)
+// 		width: 970px
+// 	@media screen and (min-width:1200px)
+// 		width: 1170px
+// 	@media screen and (min-width 1230px)
+// 		width 98%
 .wrapper
 	overflow: hidden;
 .content
@@ -99,7 +99,7 @@ section
 		transform: translateY(-3px)
 		background-color #F0DFFC
 .general-title
-	font-size: 36px
+	font-size: 42px
 	font-weight: bold
 	margin-bottom: 50px
 	color mP
@@ -107,7 +107,7 @@ section
 .general-list
 	li
 		list-style: none
-		padding-left: 54px
+		padding-left: 30px
 		margin-bottom: 30px
 		position relative
 		&:last-child
@@ -120,18 +120,18 @@ section
 			position absolute
 			top 0
 			left 0
-			width 30px
-			height 30px
+			width 18px
+			height 18px
 			border-radius: 50%
 			background-color: mP
 		&:after
 			content: ''
 			display block
 			position absolute
-			top 10px
-			left 9px
-			width 14px
-			height: 7px
+			top 6px
+			left 5px
+			width 9px
+			height: 5px
 			border-bottom: 2px solid #fff
 			border-left: 2px solid #fff
 			transform: rotate(-39deg)
