--- a/_app/styl/main/1-main.styl
+++ b/_app/styl/main/1-main.styl
@@ -1,18 +1,18 @@
 #main
 	position relative
-	background: url(../img/backs/main.png) no-repeat center
+	background: #D3D2D5 url(../img/backs/main.png) no-repeat center
 	background-size: cover
 	padding: 120px 0 250px
 .general-img-main-1
 	width 55px
-	height: 90px
+	height: 87px
 	background: url(../img/images/star-main-1.png) no-repeat center
 	background-size cover
 	top -100px
 	left 100px
 .general-img-main-2
 	width 32px
-	height: 49px
+	height: 50px
 	background: url(../img/images/star-main-2.png) no-repeat center
 	background-size cover
 	top 130px
@@ -59,7 +59,7 @@
 	&-author
 		position absolute
 		bottom: -120px
-		right 10%
+		right 3%
 		font-size: 16px
 		max-width 152px
 		span
