--- a/_app/styl/main/2-video.styl
+++ b/_app/styl/main/2-video.styl
@@ -1,23 +1,23 @@
 #video
 	padding 90px 0
-.general-img-back
+.general-img-video-back
 	width 764px
 	height: 764px
-	background url(../img/backs/video.png) no-repeat center
+	background url(../img/backs/blur.png) no-repeat center
 	background-size: contain
 	top 0
 	left -150px
 .general-img-video-stars
 	width 400px
-	height: 442px
+	height: 465px
 	background: url(../img/images/video-stars.png) no-repeat center
 	background-size: contain
 	top 0
 	right -150px
 .video-content
 	position relative
-	margin 50px 0 70px 2%
-	max-width 1100px
+	margin 50px 0 70px 7.8%
+	max-width 964px
 	&-img
 		display block
 .play-button
@@ -35,5 +35,16 @@
 	background: #fff url(../img/icons/play.png) no-repeat center
 	background-size: auto
 	transition: all .7s ease
+	animation: pulse
+	animation-duration: 2s;
+	animation-fill-mode: both;
+	animation-iteration-count: infinite;
 	&:hover
-		box-shadow: 0 0 0 15px rgba(#fff, .8)
+		animation-play-state: paused
+@keyframes pulse
+	0%
+		box-shadow: 0 0 0 0px rgba(#fff, .5)
+	50%
+		box-shadow: 0 0 0 13px rgba(#fff, .5)
+	100%
+		box-shadow: 0 0 0 0 rgba(#fff, .5)
