Promo page is all over done

--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -90,6 +90,9 @@ section
 	transition: all .6s ease;
 	position relative
 	z-index 999
+	@media screen and (max-width 560px)
+		font-size: 18px
+		padding 16px 35px
 	&:focus
 		text-decoration none
 		color #fff
