--- a/_app/styl/base/4-footer.styl
+++ b/_app/styl/base/4-footer.styl
@@ -3,13 +3,9 @@ footer
 	text-align: center
 	background-color: rgba(#eee,.7)
 	font-size: 14px
-	h5
-		font-size: 20px;
-		margin 0
-		font-family: 20
-		font-weight: bold
-	p
-		line-height: 1.3
+	@media screen and (max-width 560px)
+		font-size: 12px
+		padding 10px 0
 .conditions
 	color #000
 	text-decoration: underline
