--- a/css/styles.css
+++ b/css/styles.css
@@ -467,6 +467,12 @@ section {
   position: relative;
   z-index: 999;
 }
+@media screen and (max-width: 560px) {
+  .button {
+    font-size: 18px;
+    padding: 16px 35px;
+  }
+}
 .button:focus {
   text-decoration: none;
   color: #fff;
@@ -633,8 +639,8 @@ section {
   padding: 90px 0;
 }
 .general-img-video-back {
-  width: 764px;
-  height: 764px;
+  width: 698px;
+  height: 698px;
   background: url("../img/backs/blur.png") no-repeat center;
   -webkit-background-size: contain;
        -o-background-size: contain;
@@ -1155,14 +1161,11 @@ footer {
   background-color: rgba(238,238,238,0.7);
   font-size: 14px;
 }
-footer h5 {
-  font-size: 20px;
-  margin: 0;
-  font-family: 20;
-  font-weight: bold;
-}
-footer p {
-  line-height: 1.3;
+@media screen and (max-width: 560px) {
+  footer {
+    font-size: 12px;
+    padding: 10px 0;
+  }
 }
 .conditions {
   color: #000;
