Adaptive get starting

--- a/_app/pug/main/2-video.pug
+++ b/_app/pug/main/2-video.pug
@@ -2,11 +2,11 @@ section#video
 	.container
 		.content
 			.general-img.general-img-video-back
-			.general-im.general-img-video-singlestar
+			.general-img.general-img-video-singlestar
 			.general-img.general-img-video-stars
+			+gt('general-title-video', 'Почему не только психологам необходимо изучить метод современной проективной психологии МАК')
 			.row
 				.col-md-9
-					+gt('', 'Почему не только психологам необходимо изучить метод современной проективной психологии МАК')
 					ul.general-list
 						li Подходят для решения острых, сложных на первый взгляд нерешаемых вопросов в сфере отношений, финансов и предназначения.
 						li Экологично извлекают необходимую информацию не насилуя психику.
