--- a/_app/styl/main/1-main.styl
+++ b/_app/styl/main/1-main.styl
@@ -3,6 +3,8 @@
 	background: #D3D2D5 url(../img/backs/main.png) no-repeat center
 	background-size: cover
 	padding: 120px 0 250px
+	@media screen and (max-width 1199px)
+		padding 40px 0 120px
 .general-img-main-1
 	width 55px
 	height: 87px
@@ -10,6 +12,8 @@
 	background-size cover
 	top -100px
 	left 100px
+	@media screen and (max-width 1199px)
+		top -105px
 .general-img-main-2
 	width 32px
 	height: 50px
@@ -62,5 +66,8 @@
 		right 3%
 		font-size: 16px
 		max-width 152px
+		@media screen and (max-width 1199px)
+			bottom: -60px
+			right 5%
 		span
 			display block
