--- a/_app/styl/main/4-plan.styl
+++ b/_app/styl/main/4-plan.styl
@@ -7,6 +7,12 @@
 	background-size contain
 	top -400px
 	right -300px
+	@media screen and (max-width 1199px)
+		background-image: url(../img/images/plan-stars-1-mid.png)
+		width 288px
+		height: 368px
+		right -100px
+		top -300px
 .general-img-plan-back
 	width 536px
 	height: 536px
@@ -14,6 +20,9 @@
 	background-size contain
 	top -150px
 	left -100px
+	z-index -1
+	@media screen and (max-width 1199px)
+		top 0
 .general-img-plan-1
 	width 65px
 	height: 103px
@@ -21,6 +30,11 @@
 	background-size contain
 	top -30px
 	left -70px
+	@media screen and (max-width 1199px)
+		left auto
+		right 220px
+		top auto
+		bottom: 230px
 .general-img-plan-stars-2
 	width 900px
 	height: 700px
@@ -28,6 +42,12 @@
 	background-size contain
 	bottom: -330px
 	right -350px
+	@media screen and (max-width 1199px)
+		background-image: url(../img/images/plan-stars-2-mid.png)
+		width 787px
+		height: 536px
+		bottom: -280px
+		right -250px
 .days
 	display flex
 	align-items: flex-start
