--- a/_app/styl/main/6-revs.styl
+++ b/_app/styl/main/6-revs.styl
@@ -1,9 +1,22 @@
 #revs
-	padding 90px 0
+	padding 60px 0 150px
+	@media screen and (max-width 1199px)
+		padding 40px 0 150px
+.general-img-revs-back
+	@media screen and (max-width 1199px)
+		width 536px
+		height: 536px
+		background: url(../img/backs/blur.png) no-repeat center
+		background-size contain
+		top -160px
+		left -50px
+		z-index -1
 .slick-dotted.slick-slider
 	margin 0 auto
 	width 100%
 	max-width 940px
+	@media screen and (max-width 1199px)
+		max-width 770px
 .revs-slider-text.slick-dotted.slick-slider
 	margin-bottom: 120px
 .slick-list
