--- a/_app/styl/main/3-about.styl
+++ b/_app/styl/main/3-about.styl
@@ -1,5 +1,7 @@
 #about
 	padding 30px 0 90px
+	@media screen and (max-width 1199px)
+		padding 60px 0
 .general-img-about-back
 	width 435px
 	height: 435px
@@ -7,6 +9,8 @@
 	background-size: contain
 	top -80px
 	right 0
+	@media screen and (max-width 1199px)
+		top: 150px
 .general-img-about-1
 	width 52px
 	height: 102px
@@ -14,6 +18,9 @@
 	background-size contain
 	top 0
 	right -80px
+	@media screen and (max-width 1199px)
+		right 0
+		top 70px
 .general-img-about-2
 	width 52px
 	height: 82px
