--- a/_app/styl/main/5-author.styl
+++ b/_app/styl/main/5-author.styl
@@ -7,6 +7,9 @@
 	background-size contain
 	bottom: 100px
 	left -50px
+	@media screen and (max-width 1199px)
+		background: none
+		display none
 .general-img-author
 	width 48px
 	height: 76px
@@ -14,6 +17,9 @@
 	background-size contain
 	top 350px
 	left 0
+	@media screen and (max-width 1199px)
+		top 320px
+		left -20px
 .author
 	&-img
 		display block
